--- a/freya/templates/map.html
+++ b/freya/templates/map.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Map</title>
+    <link rel="stylesheet" href="ol.css">
+    <script src="ol.js"></script>
 </head>
 <body>
 
