--- a/freya/templates/map.html
+++ b/freya/templates/map.html
@@ -6,7 +6,7 @@
 
     {%block styles%}
     {% assets "page_css" %}
-    <link rel="stylesheet" href="{{ ASSET_URL }}"/>
+    <link rel="stylesheet" href="{{ ASSET_URL }}?foo=1dfsd23"/>
     {% endassets %}
     {% endblock %}
 
