--- a/freya/static/scss/page.css
+++ b/freya/static/scss/page.css
@@ -1,7 +1,7 @@
 #head-div {
-height: 80px;
+height: 80px; /*норм почитай док-цию, ты заебала уже*/
 width: 100%;
-background-color: #CFE270;
+background-color: #C0F56E;
 position: absolute;
 top: 0;
 bottom: 0;
