че-та для popover

--- a/freya/templates/map.html
+++ b/freya/templates/map.html
@@ -17,9 +17,10 @@
 <body>
 <div id="head-div"><h1 id="head-text">FREYA</h1></div>
 
-<div id="map" style="height: 635px; margin-top: 90px;"></div> <!--норм почитай док-цию, ты заебала уже-->
+<div id="map" style="height: 635px; margin-top: 90px;"></div>
 {% assets "map_js" %}
 	<script type="text/javascript" src="{{ ASSET_URL }}"></script>
 {% endassets %}
+
 </body>
 </html>
