--- a/freya/static/css/page.css
+++ b/freya/static/css/page.css
@@ -1,11 +1,10 @@
 #head-div {
-height: 80px; /*норм почитай док-цию, ты заебала уже*/
+height: 80px;
 width: 100%;
 background-color: #C0F56E;
 position: absolute;
 top: 0;
-bottom: 0;
-left : 0;
+left: 0;
 }
 
 @font-face {
@@ -16,10 +15,10 @@ src: url('fonts/Exo_Thin_Italic.ttf');
 font-family: 'Exo 2.0 Thin Italic';
 color: rgb(255, 255, 255);
 font-size: 50px;
+height: 50px;
 font-weight: bold;
-text-align: left;
-position: inherit;
-bottom: -20px;
+position: absolute;
+bottom: 10px;
 left: 50px;
 }
 /*Это еще не конец*/
