--- a/freya/static/css/page.css
+++ b/freya/static/css/page.css
@@ -1,7 +1,7 @@
 #head-div {
 height: 80px;
 width: 100%;
-background-color: #C0F56E;
+background-color: #85DA61;
 position: absolute;
 top: 0;
 left: 0;
