--- a/freya/static/css/map.css
+++ b/freya/static/css/map.css
@@ -1,7 +1,7 @@
 #map {
     position: ; /*норм почитай док-цию, ты заебала уже*/
-    height: 80px;
-    width: 100%;
+    height: 635px;
+    margin-top: 90px;
 }
 
 .ol-mouse-position {
