--- a/freya/templates/map.html
+++ b/freya/templates/map.html
@@ -12,18 +12,17 @@
     	<link rel="stylesheet" href="{{ ASSET_URL }}"/>
     {% endassets %}
     {% endblock %}
-
 </head>
 <body>
 <div id="head-div"><h1 id="head-text">FREYA</h1></div>
 
-<div id="map" style="height: 635px; margin-top: 90px;"></div>
-<div style="display: none;">
-    <div id="marker" title="Marker"></div>
+<div id="map">
+    <div style="display: none;">
+        <div id="marker" title="Marker"></div>
+    </div>
 </div>
 {% assets "map_js" %}
 	<script type="text/javascript" src="{{ ASSET_URL }}"></script>
 {% endassets %}
-
 </body>
 </html>
