--- a/freya/templates/map.html
+++ b/freya/templates/map.html
@@ -16,10 +16,10 @@
 <body>
 <div id="head-div"><h1 id="head-text">FREYA</h1></div>
 
-<div id="map">
-    <div style="display: none;">
-        <div id="marker" title="Marker"></div>
-    </div>
+<div id="map"></div>
+<div style="display: none;">
+    <div id="marker"></div>
+
 </div>
 {% assets "map_js" %}
 	<script type="text/javascript" src="{{ ASSET_URL }}"></script>
