--- a/freya/templates/map.html
+++ b/freya/templates/map.html
@@ -18,8 +18,7 @@
 
 <div id="map"></div>
 <div style="display: none;">
-    <div id="marker"></div>
-
+    <div id="popup" data-toggle="popover" title="popup" content="fkfkfkko;hjd'lisyptofiawep9gfawio[ehgaftyciulaweysxdr"></div>
 </div>
 {% assets "map_js" %}
 	<script type="text/javascript" src="{{ ASSET_URL }}"></script>
