--- a/freya/static/css/map.css
+++ b/freya/static/css/map.css
@@ -39,3 +39,8 @@
 .ol-zoomslider button:hover {
     background-color: rgba(255, 255, 255, 1);
 }
+
+.popover-content {
+min-width: 180px;
+width: auto;
+}
