--- a/freya/static/css/map.css
+++ b/freya/static/css/map.css
@@ -40,7 +40,17 @@
     background-color: rgba(255, 255, 255, 1);
 }
 
+.popover-title {
+background: #85DA61;
+font-family: 'Exo 2.0 Thin Italic';
+color: white;
+font-size: 13.8pt;
+font-weight: bold;
+}
 .popover-content {
-min-width: 200px;
-width: auto;
+width: 232px;
+font-family: 'Exo 2.0 Thin Italic';
+color: black;
+font-size: 11.5pt;
+font-weight: bold;
 }
