--- a/freya/templates/map.html
+++ b/freya/templates/map.html
@@ -14,18 +14,55 @@
     {% endblock %}
 </head>
 <body>
-<div id="head-div"><h1 id="head-text">FREYA</h1></div>
-
-<div id="map"></div>
-<div style="display: none;">
-    <div id="popup" data-toggle="popover" title="Telemetry"></div>
+<div class="layout">
+    <div class="layout_row layout_row_navbar">
+        <div class="layout_cell">
+            <div class="base-navbar">
+                <div class="base-navbar_section base-navbar_section_left">
+                    <span class="title">FREYA</span>
+                </div>
+                <div class="base-navbar_section base-navbar_section_right">
+                    <ul class="navbar-links">
+                       <li class="navbar-links_item">
+                           <a href="/map/" class="navbar-links_item-link">Карта</a>
+                       </li>
+                        <li class="navbar-links_item" id="last_item">
+                           <a href="https://vk.com/finian_f" class="navbar-links_item-link">О нас</a>
+                       </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="layout_row layout_row_content">
+        <div class="layout_cell_map">
+            <div class="base_map_content">
+                <div id="map"></div>
+                <div style="display: none;">
+                    <div id="popup" data-toggle="popover" title="Telemetry"></div>
+                </div>
+                <div class="map_desc_cell_right">
+                    <p class="desc">
+                        Здесь вы можете ознакомиться с последней телеметрией, полученной с нашего аппарата.<br>
+                        Для этого нажмите на красную точку на карте. Чтобы закрыть окно с телеметрией, кликните в любое другое место на карте.<br>
+                        Обновление телеметрии происходит динамически в режиме реального времени.
+                    </p>
+                    <div class="cat_pic">
+                        {% assets "cat_pic" %}
+                        <img src="{{ ASSET_URL }}" alt="cat">
+                        {% endassets %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
 {% assets "map_js" %}
 	<script type="text/javascript" src="{{ ASSET_URL }}"></script>
 {% endassets %}
 
 <script type="text/javascript">
-
 $(document).ready(function() {
    draw({{lat}}, {{lon}}, "<p>{{desc | safe}}<p/>")
 })
