--- a/freya/templates/map.html
+++ b/freya/templates/map.html
@@ -1,40 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Freya</title>
+{% extends "page_temp.html" %}
 
-    {%block styles%}
-    {% assets "page_css" %}
-    	<link rel="stylesheet" href="{{ ASSET_URL }}"/>
-    {% endassets %}
-    {% assets "map_css" %}
-    	<link rel="stylesheet" href="{{ ASSET_URL }}"/>
-    {% endassets %}
-    {% endblock %}
-</head>
-<body>
-<div class="layout">
-    <div class="layout_row layout_row_navbar">
-        <div class="layout_cell">
-            <div class="base-navbar">
-                <div class="base-navbar_section base-navbar_section_left">
-                    <span class="title">FREYA</span>
-                </div>
-                <div class="base-navbar_section base-navbar_section_right">
-                    <ul class="navbar-links">
-                       <li class="navbar-links_item">
-                           <a href="/map/" class="navbar-links_item-link">Карта</a>
-                       </li>
-                        <li class="navbar-links_item" id="last_item">
-                           <a href="https://vk.com/finian_f" class="navbar-links_item-link">О нас</a>
-                       </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="layout_row layout_row_content">
+{% block styles %}
+{{ super() }}
+
+{% assets "map_css" %}
+    <link rel="stylesheet" href="{{ ASSET_URL }}"/>
+{% endassets %}
+
+{% endblock %}
+
+{% block content %}
+<div class="layout_row layout_row_content">
         <div class="layout_cell_map">
             <div class="base_map_content">
                 <div id="map"></div>
@@ -55,8 +31,10 @@
                 </div>
             </div>
         </div>
-    </div>
-</div>
+ </div>
+{% endblock %}
+
+{% block js %}
 
 {% assets "map_js" %}
 	<script type="text/javascript" src="{{ ASSET_URL }}"></script>
@@ -67,5 +45,5 @@ $(document).ready(function() {
    draw({{lat}}, {{lon}}, "<p>{{desc | safe}}<p/>")
 })
 </script>
-</body>
-</html>
+
+{% endblock %}
