--- a/freya/templates/page_temp.html
+++ b/freya/templates/page_temp.html
@@ -5,11 +5,12 @@
     {% block title %}<title>Freya</title>{% endblock %}
 
     {%block styles%}
-
+    {% assets "bt_css" %}
+    	<link rel="stylesheet" href="{{ ASSET_URL }}"/>
+    {% endassets %}
     {% assets "page_css" %}
     	<link rel="stylesheet" href="{{ ASSET_URL }}"/>
     {% endassets %}
-
     {% endblock %}
 
 </head>
@@ -19,7 +20,7 @@
         <div class="layout_cell">
             <div class="base-navbar">
                 <div class="base-navbar_section base-navbar_section_left">
-                    <span class="title">FREYA</span>
+                    <a href="/" class="title">FREYA</a>
                 </div>
                 <div class="base-navbar_section base-navbar_section_right">
                     <ul class="navbar-links">
@@ -27,7 +28,7 @@
                            <a href="/map/" class="navbar-links_item-link">Карта</a>
                        </li>
                         <li class="navbar-links_item" id="last_item">
-                           <a href="https://vk.com/finian_f" class="navbar-links_item-link">О нас</a>
+                           <a href="/freya_team" class="navbar-links_item-link">О нас</a>
                        </li>
                     </ul>
                 </div>
@@ -37,6 +38,10 @@
     {% block content %}{% endblock %}
 </div>
 
-{% block js %}{% endblock %}
+{% block js %}
+{% assets "bt_js" %}
+    <script type="text/javascript" src="{{ ASSET_URL }}"></script>
+{% endassets %}
+{% endblock %}
 </body>
 </html>
