--- a/freya/templates/main_page.html
+++ b/freya/templates/main_page.html
@@ -7,6 +7,11 @@
             <p class="main_block">
                 <h1 class="content_title">html и css скоро сведут меня в могилу<br>мяу</h1>
             </p>
+            <div class="cat_pic">
+                {% assets "cat_pic2" %}
+                <img id="cat_pic" src="{{ ASSET_URL }}" alt="cat">
+                {% endassets %}
+            </div>
         </div>
     </div>
 </div>
