--- a/freya/templates/freya_team.html
+++ b/freya/templates/freya_team.html
@@ -3,8 +3,9 @@
 {% block styles %}
 {{ super() }}
 
-
-
+{% assets "ft_css" %}
+    <link rel="stylesheet" href="{{ ASSET_URL }}"/>
+{% endassets %}
 {% endblock %}
 
 {% block content%}
