Поправлены скрипты и что-то еще

--- a/freya/templates/map.html
+++ b/freya/templates/map.html
@@ -42,7 +42,7 @@
 
 <script type="text/javascript">
 $(document).ready(function() {
-   draw({{lat}}, {{lon}}, "<p>{{desc | safe}}<p/>")
+   draw()
 })
 </script>
 
