--- a/freya/templates/main_page.html
+++ b/freya/templates/main_page.html
@@ -5,7 +5,7 @@
     <div class="layout_cell layout_cell_content">
         <div class="base_content">
             <p class="main_block">
-                <h1 class="content_title">html и css скоро сведут меня в могилу<br>мяу</h1>
+                <h1 class="content_title">какой-то текст<br>мяу</h1>
             </p>
             <div class="cat_pic">
                 {% assets "cat_pic2" %}
