--- a/freya/static/css/page.css
+++ b/freya/static/css/page.css
@@ -116,7 +116,7 @@ body {
     margin-right: 0;
 }
 
-.navbar-links_item-link .navbar-links_item-link:visited {
+.navbar-links_item-link {
    -webkit-font-smoothing: antialiased;
     display: flex;
     -webkit-box-align: center;
@@ -132,7 +132,19 @@ body {
 .navbar-links_item-link:hover {
     color: grey;
 }
-.navbar-links_item-link:
+.navbar-links_item-link:visited {
+   -webkit-font-smoothing: antialiased;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    box-sizing: border-box;
+    height: 100%;
+    font-family: 'Exo 2.0 Thin Italic';
+    font-weight: bold;
+    color: white;
+    letter-spacing: -.2px;
+    font-size: 30px;
+}
 
 
 .content_title {
