--- a/freya/templates/page_temp.html
+++ b/freya/templates/page_temp.html
@@ -20,7 +20,7 @@
         <div class="layout_cell">
             <div class="base-navbar">
                 <div class="base-navbar_section base-navbar_section_left">
-                    <a href="/" class="title">FREYA</a>
+                    <a href="/" class="title">GRAVICAPA</a>
                 </div>
                 <div class="base-navbar_section base-navbar_section_right">
                     <ul class="navbar-links">
