--- a/freya/templates/page_temp.html
+++ b/freya/templates/page_temp.html
@@ -25,7 +25,7 @@
                 <div class="base-navbar_section base-navbar_section_right">
                     <ul class="navbar-links">
                        <li class="navbar-links_item">
-                           <a href="/map/" class="navbar-links_item-link">Карта</a>
+                           <a href="/projects" class="navbar-links_item-link">Проекты</a>
                        </li>
                         <li class="navbar-links_item" id="last_item">
                            <a href="/freya_team" class="navbar-links_item-link">О нас</a>
