--- a/freya/templates/page_temp.html
+++ b/freya/templates/page_temp.html
@@ -27,6 +27,9 @@
                        <li class="navbar-links_item">
                            <a href="/projects" class="navbar-links_item-link">Проекты</a>
                        </li>
+                       <li class="navbar-links_item">
+                           <a href="/map/" class="navbar-links_item-link">Карта</a>
+                       </li>
                         <li class="navbar-links_item" id="last_item">
                            <a href="/freya_team" class="navbar-links_item-link">О нас</a>
                        </li>
